# jp-learning-platform

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.ai/: ARCHITECTURE.md  BOOTSTRAP.md  CODING_STANDARD.md  PROJECT_STATE.yaml  REPOSITORY_RULES.md  ROADMAP.md  SESSION_LOG.md
.github/workflows/: ci.yml
docs/: architecture.md  audio-loader.md  domain-models.md  domain-services.md  homophone-prefilter-benchmark.md  japanese-sentence-boundary-resolution.md  japanese-word-normalization-stage.md  local-audio-srt-cli.md  pipeline-configuration.md  plugin-system.md  qwen-repair-stage.md  readability-optimizer-stage.md  release-1.0.md  sentence-boundary-stage.md  subtitle-builder-stage.md  subtitle-merger-stage.md  subtitle-validator-stage.md  subtitle-writer-stage.md  tool-registry.md  whisper-stage.md  whisperx-alignment-stage.md  workflow-runtime.md
src/jp_learning_platform/: __init__.py  __main__.py  architecture.py
tests/: test_architecture.py  test_audio_loader.py  test_domain_models.py  test_domain_services.py  test_faster_whisper_transcriber.py  test_homophone_resolver.py  test_homophone_stage.py  test_japanese_sentence_boundary_resolver.py  test_japanese_word_normalizer.py  test_japanese_word_stage.py  test_kotoba_whisper_transcriber.py  test_listening_json_writer.py  test_package.py  test_pipeline_config.py  test_pipeline_progress_artifacts.py  test_plugin_system.py  test_pyannote_diarizer.py  test_qwen_repair_safety.py  test_qwen_repair_stage.py  test_readability_optimizer_stage.py  test_reazon_speech_transcriber.py  test_sentence_boundary_adapters.py  test_sentence_boundary_stage.py  test_srt_subtitle_writer.py  test_subtitle_builder_stage.py  test_subtitle_merger_stage.py  test_subtitle_pipeline_runner.py  test_subtitle_quality_adapters.py  test_subtitle_validator_stage.py  test_subtitle_writer_stage.py  test_tool_registry.py  test_whisper_stage.py  test_whisperx_alignment_stage.py  test_word_subtitle_builder.py  test_workflow_runtime.py
(+45 files in other folders)
