[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-learning-platform"
version = "1.0.0"
description = "AI-powered Japanese learning platform focused on subtitle pipeline generation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "JP Learning Platform Maintainers" }
]
dependencies = []

[project.optional-dependencies]
asr = [
  "transformers>=4.39",
  "accelerate>=0.28",
  "torch>=2.0",
  "torchaudio>=2.0",
  "faster-whisper>=1.0"
]
align = [
  "whisperx>=3.3"
]
japanese = [
  "sudachipy>=0.6",
  "sudachidict-core>=2024.1"
]
homophone = [
  "transformers>=4.39",
  "torch>=2.0",
  "sudachipy>=0.6",
  "sudachidict-core>=2024.1",
  "fugashi>=1.3",
  "unidic-lite>=1.0"
]
diarization = [
  "pyannote.audio>=3.1"
]
vad = [
  "torch>=2.0",
  "torchaudio>=2.0"
]
qwen = [
  "llama-cpp-python>=0.2"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
jp-learning-platform = "jp_learning_platform.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers"
]
